2008-??-?? CLAM 1.?.?

 * Doxygen documentation extractor script fixed and improved. Now most documentation is accessible from python through the help() command (documentation string is at .__doc__ member).
 * Py++ doxygen documentation extractor script added.
 * Spectrum and SpectrumConfig classes are now manually exposed to python and old extra wrappers for these classes were removed. Warning: at the moment they are not fully exposed, there are ready just a couple of methods.
 * DataArray __setitem__ class method definition wrapping a new method EditElem in order to have [] working for python vectors also in assignation, instead of have to use the workaround with set(). pyclam.patch updated.
 * Audio and DataArray classes manually exposed. Removed now unused extra wrappers for those classes at Definitions.hxx.
 * distcc support added to scons script.
 * Moving remaining source to src directory. indexing suite directory, Definitions.*xx, etc.
 * MonoAudioFileReaderConfig now exposed to python by hand.
 * Removed unused old extra-wrappers for some Processing's and ProcessingConfig's.
 * Bug fixed in py++ to get 'by hand' class registration above of all.
 * License include (in bindings files generated by py++).
 * Split of the python library in many files in order to get a lower compile time. Before was only a single file, useful to have the generated bindings updated in the server, but when the library gets stable, automatic generated files could be also uploaded to achieve the same.
 * New manually exposed classes (like FFTConfig) in order to avoid some problems with py++ and DynamicTypes.
 * Py++ script tweak to allow automatic inclusion and register of manually 'parsed' and exposed classes.
 * Code clean. Removed (now)unused extra-wrappers (Network, NetworkPlayer, etc).
 * Debug option added to scons build script.
 * Examples update:
 ** New example: loading_and_playing_a_network.py